--- a/src/app/addvoter/addvoter.component.html
+++ b/src/app/addvoter/addvoter.component.html
@@ -126,7 +126,8 @@
       <br>
 
 
-      <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#exitApplication" [disabled]="!form.valid"
+      <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#exitApplication" 
+      [disabled]="!form.valid"
        > Submit </button>
 
 
