--- a/src/app/candidateorganisation/candidateorganisation.component.html
+++ b/src/app/candidateorganisation/candidateorganisation.component.html
@@ -95,7 +95,7 @@
         <hr>
   <br>
         <button type="button" class="btn btn-primary btn-large" 
-        [disabled]="vari && !form.valid" data-toggle="modal" data-target="#exitApplication"> Submit </button>
+        data-toggle="modal"     data-target="#exitApplication"> Submit </button>
 
         <!-- Exit (Are you sure?) Modal -->
         <div class="modal fade" id="exitApplication" tabindex="-1" role="dialog" aria-labelledby="exitApplication">
