--- a/src/app/candidateorganisation/candidateorganisation.component.html
+++ b/src/app/candidateorganisation/candidateorganisation.component.html
@@ -130,7 +130,9 @@
       copyright @2021 | Team 16
     </p>
   </div>
-         
+  <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+    <p style="color: white">Please Wait. </p>  
+    </ngx-spinner>  
     </section>
 
       
