--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,10 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <section style="margin-left: 290px;" >
 
 <div class="container-fluid">
@@ -13,40 +18,65 @@
             <div class="tab-pane active" id="home">
                 <hr>
                   <form class="form" action="##" method="post" id="registrationForm">
-                      <!-- <div class="form-group">
-                          
-                          <div class="col-xs-6">
-                              <label for="first_name"><h4>Full name</h4></label>
-                              <input type="text" class="form-control"   placeholder="full name" title="enter your full name if any.">
-                          </div>
-                      </div> -->
-                   
+         
                 
                       <div class="form-group">
                           
-                          <div class="col-xs-6">
-                              <label for="email"><h4>Email</h4></label>
+                          <div class="col-xs-6" style="margin-bottom: 20px;">
+                              <label for="email"><b>Email   </b></label>
                               
-                              <!-- <input type="email" class="form-control"  placeholder="you@email.com" title="enter your email."> -->
+                              <div class="input-icons d-flex">
+                                <input type="{{type}}" readonly
+                                touched class="form-control input-field col-lg-5 " placeholder="Password" value={{this.username}}
+                                aria-describedby="defaultRegisterFormPasswordHelpBlock"> 
+                                <!-- <input type="text" [(ngModel)]="password" name="password"  class="form-control" required> -->
+                              </div>
+                            <!-- <input type="email" class="form-control"  placeholder="you@email.com" title="enter your email."> -->
                           </div>
                       </div>
                   
                       <div class="form-group">
                           
-                          <div class="col-xs-6">
-                              <label for="password"><h4>Password</h4></label>
+                          <div class="col-xs-6" style="margin-bottom: 20px;">
+                              <label for="password"><b>Password    </b></label>
                               
+                             
+                              <div class="input-icons d-flex" >
+                               
+                                <div class="col" >
+                                  <input type="{{type}}" readonly
+                                  touched class="form-control input-field col-lg-5 " placeholder="Password" value={{this.password}}
+                                  aria-describedby="defaultRegisterFormPasswordHelpBlock"> 
+                                  <!-- <input type="text" [(ngModel)]="password" name="password"  class="form-control" required> -->
+                                 
+                                </div>
+
+                         
+                           
+                               
+                              </div>
+
+                             
                               <!-- <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password."> -->
                           </div>
+                          
                       </div>
                     
+
+
                       <div class="form-group">
-                           <div class="col-xs-12">
-                                <br>
-                                <button type="button" class="btn btn-success btn-large" data-toggle="modal" data-target="#exitApplication">
-                                <i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                               	
-                            </div>
+                        
+                            <div class="col-xs-6 ">
+                              <a href="#editEmployeeModal"  data-toggle="modal" class=" edit btn btn-primary ml-5">Edit</a>
+                                   
+                              </div>
+                              <div  class="col-xs-6">
+                                
+                                <button class="eyeBtn" *ngIf="showBtn" (click)="show()"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                                <button class="eyeBtn" *ngIf="hideBtn"(click)="hide()"><i class="fas fa-eye-slash"></i></button>
+                                
+                              </div>
+                          
                       </div>
               	</form>
               
@@ -59,21 +89,40 @@
 </div>
         </div><!--/col-9-->
     </div><!--/row-->
-          <!-- Exit (Are you sure?) Modal -->
-        <div class="modal fade" id="exitApplication" tabindex="-1" role="dialog" aria-labelledby="exitApplication">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" >&times;</span></button>
-                                     </div>
-                <div class="modal-body">
-                  Do you want to save this application for later?
-                </div>
-                <div class="modal-footer">
-                  <a data-dismiss="modal" role="button" class="btn btn-default btn-large">Don't save</a>
-                  <a data-dismiss="modal" role="button" class="btn btn-success btn-large">Save</a>
-                </div>
-              </div>
+        	<!-- Edit Modal HTML -->
+		<div id="editEmployeeModal" class="modal fade">
+			<div class="modal-dialog ">
+				<div class="modal-content">
+					<form>
+						<div class="modal-header">						
+							<h4 class="modal-title">Edit Your Profile</h4>
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						</div>
+						<div class="modal-body " style="width: 60%;">
+							<div class="form-group">
+								<label>UserName</label>
+							<input type="text" [(ngModel)]="username"  name="username"  class="form-control" required>
+						   </div> 
+							<!-- <div class="form-group">
+								<label>Password</label>
+								<input type="text" [(ngModel)]="password" name="password"  class="form-control" required>
+              </div> -->
+              
+              <div class="input-icons d-flex">
+                <button class="eyeBtn" *ngIf="showBtn" (click)="show()"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                <button class="eyeBtn" *ngIf="hideBtn"(click)="hide()"><i class="fas fa-eye-slash"></i></button>
+        
+                <input type="{{type}}" name="password" touched class="form-control input-field col-lg-5 " placeholder="Password"[(ngModel)]="password"
+                aria-describedby="defaultRegisterFormPasswordHelpBlock"> 
+                <!-- <input type="text" [(ngModel)]="password" name="password"  class="form-control" required> -->
             </div>
-          </div><!-- /Exit (Are you sure?) Modal -->                                            
+						</div>
+						<div class="modal-footer">
+							<input type="button" class="btn btn-default" data-dismiss="modal" data-dismiss="modal" (click)="load()" value="Cancel">
+							<input type="submit" class="btn btn-info" (click)="updateAdminDetails(username,password)"  data-dismiss="modal" value="Save">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>                                           
 </section>
