--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,12 +23,12 @@
                       <div class="form-group">
                           
                           <div class="col-xs-6" style="margin-bottom: 20px;">
-                              <label for="email"><b>Email   </b></label>
+                              <label for="email"><b>Username   </b></label>
                               
                               <div class="input-icons d-flex">
-                                <input type="{{type}}" readonly
+                                <input type="text" readonly
                                 touched class="form-control input-field col-lg-5 " placeholder="Password" value={{this.username}}
-                                aria-describedby="defaultRegisterFormPasswordHelpBlock"> 
+                                > 
                                 <!-- <input type="text" [(ngModel)]="password" name="password"  class="form-control" required> -->
                               </div>
                             <!-- <input type="email" class="form-control"  placeholder="you@email.com" title="enter your email."> -->
