--- a/src/app/addvoter/addvoter.component.html
+++ b/src/app/addvoter/addvoter.component.html
@@ -4,25 +4,21 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
-
+  
+<nav class="navbar navbar-default" style="background-color:#252636;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <i class="fa fa-align-right"></i>
+      </button>
+      <a class="navbar-brand" href="#">e<span class="main-color">Ballot</span></a>
+    </div>
+   
+  </div>
+</nav>
 <section id="contents">
   
-     
-  
-  <nav class="navbar navbar-default" style="background-color:#252636;">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <i class="fa fa-align-right"></i>
-          </button>
-          <a class="navbar-brand" href="#">e<span class="main-color">Ballot</span></a>
-        </div>
-       
-      </div>
-    </nav>
-
-
-
+    
 <br>
 <div class="  col-sm-12 ">
             
@@ -122,15 +118,15 @@
       
       </div><!--/ Row-->
       
-      <hr>
-      <br>
+  <br>
 
 
       <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#exitApplication" 
       [disabled]="!form.valid"
        > Submit </button>
 
-
+<br>
+<br>
 
       <!-- Exit (Are you sure?) Modal -->
       <div class="modal fade" id="exitApplication" tabindex="-1" role="dialog" aria-labelledby="exitApplication">
@@ -156,5 +152,5 @@
     
   </div> <!-- /Main Content -->
   
-  
+  </section>
          
