--- a/src/app/voterdashboard/voterdashboard.component.html
+++ b/src/app/voterdashboard/voterdashboard.component.html
@@ -36,8 +36,15 @@
   </nav>
   <br>
   <div class="alert alert-info" role="alert">
-    <h4>A Separate application  must be filed for each person seeking assistance.</h4>
-    <p>Section 1 must be completed for all applications. The claimant is the person who has expenses or is seeking assistance as a result of a crime. If you are filing this application on behalf of someone else, put their information in Section 1 and your information in Section 3.</p>
+    <h4>Thank you for choosing e-ballot.</h4>
+    <h4>Here are some rules you need to follow for voting the candidate.</h4>
+    <p>1.You are allowed to vote only if you upload the valid secure file which
+      was sent on your email.
+       </p>
+       <p>2.You are allowed to vote only one candidate at a time.</p>
+    <p>3.Once you vote the candidate your are not allowed to vote again. Hence make the correct choice.</p>
+
+
   </div>
 
 <br>
