--- a/src/app/addvoter/addvoter.component.css
+++ b/src/app/addvoter/addvoter.component.css
@@ -1,19 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito|Bungee');
 
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: whitesmoke;
-  color:#313348 ;
-  text-align: center;
-}
+
 
 
 * {
-    padding: 0;
-    margin: 0;
+    
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -35,7 +26,8 @@
   #contents {
     position: relative;
     transition: .3s;
-  
+    padding-right: 15%;
+  padding-left: 15%;
     background-color: whitesmoke;
   }
   .margin {
