--- a/src/app/candidateorganisation/candidateorganisation.component.css
+++ b/src/app/candidateorganisation/candidateorganisation.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito|Bungee');
-
 .footer {
   position: fixed;
   left: 0;
@@ -9,11 +7,13 @@
   color:#313348 ;
   text-align: center;
 }
+@import url('https://fonts.googleapis.com/css?family=Nunito|Bungee');
+
+
 
 
 * {
-    padding: 0;
-    margin: 0;
+    
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -35,7 +35,8 @@
   #contents {
     position: relative;
     transition: .3s;
-  
+    padding-right: 15%;
+  padding-left: 15%;
     background-color: whitesmoke;
   }
   .margin {
