--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,12 +18,14 @@
             <li class="nav-item">
               <a class="nav-link" href="#features">features</a>
             </li>
-            
-<!--   
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">contact</a>
-              </li> -->
-        
+
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">contact</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="result">Result</a>
+            </li>
             
           </ul>
         </div>
