--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     <section>
         <div class="container">
           <div class="user signinBx">
-            <div class="imgBx"><img src="https://www.eballot.com/hs-fs/hubfs/EBA-03-Home-Online-Election-Software-Security.jpg?width=1300&height=720&name=EBA-03-Home-Online-Election-Software-Security.jpg" alt="" /></div>
+            <div class="imgBx"><img src="/assets/images/photo.jpg" alt="" /></div>
             <div class="formBx">
               <form [formGroup]="form" >
                 <h2>Sign In</h2>
