--- a/src/app/managecandidate/managecandidate.component.html
+++ b/src/app/managecandidate/managecandidate.component.html
@@ -28,7 +28,7 @@
 						<th>Employee ID</th>
 						<th>Full Name</th>
 						<th>Adharcard Number</th>
-						<th>Symbol</th>
+						<!-- <th>Symbol</th> -->
 						<th>E-mail ID</th>
 						<th>Actions</th>
 					</tr>
@@ -53,13 +53,13 @@
 								{{candidate.adharNo}}
 							</div>
 						</td>
-						<td>
+					<!--	<td>
 							<div  class="form-group" >
 								<img class="image-holder" src=candidate.symbol />
-						        <!-- <input type="file" /> -->
+						        <input type="file" /> 
 							</div>
 					
-						</td>
+						</td>-->
 						<td>
 							<div class="form-group">
 								<!-- <input type="text" value={{candidate.email}}  class="form-control" required> -->
