--- a/src/app/createballot/createballot.component.html
+++ b/src/app/createballot/createballot.component.html
@@ -13,10 +13,10 @@
           <span class="sr-only">(current)</span>
         </span>
       </li>
-      <li class="page-item"><a class="page-link" href="E-Ballot/api/candidatelist">Select Candidates for Election</a></li>
+      <li class="page-item"><a class="page-link">Select Candidates for Election</a></li>
      
       <!-- <li class="page-item disabled"> -->
-        <li class="page-item"><a class="page-link" [routerLink]="['/voterlist']">Select Voters of Election</a></li>
+        <li class="page-item"><a class="page-link" >Select Voters of Election</a></li>
     </ul>
   </nav>
   <div class="  col-sm-12 ">
@@ -36,7 +36,7 @@
         <div class="col-lg-offset-0 col-lg-6 col-xs-12 col-sm-6">
           <div class="form-group">
             <label for="exampleInputEmail1">CIN Number</label>
-            <input style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
+            <input required style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
             padding: .5rem .75rem;border-radius: .50rem;" type="text" name="cin"
              [(ngModel)]="Election.cin" class="form-control" id="exampleInputEmail1" placeholder="CIN Number">
              <small id="emailHelp" class="form-text text-danger"
@@ -52,7 +52,7 @@ name="myForm" novalidate>
           
           <div class="form-group">
             <label for="exampleInputEmail1">Election Name</label>
-            <input style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
+            <input required style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
             padding: .5rem .75rem;border-radius: .50rem;" type="text" id="electionName" name="electionName" [(ngModel)]="Election.electionName" class="form-control" id="exampleInputEmail1" placeholder="Election Name">
          <span ng-show="myForm.electionName.$error.required">Username is required.</span>
         </div>
@@ -62,16 +62,18 @@ name="myForm" novalidate>
         <div class="col-lg-offset-0 col-lg-6 col-xs-12 ">
           <div class="form-group">
             <label for="exampleInputEmail1">Start Date</label>
-            <input min={{this.currentDate}} style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
+            <input required min={{this.currentDate}} style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
             padding: .5rem .75rem;border-radius: .50rem;" type="date" name="startDate" id="startDate" [(ngModel)]="Election.startDate" class="form-control" id="exampleInputEmail1" placeholder="Start Date Of Election">
+           
           </div>
         </div>
 
         <div class="col-lg-offset-0 col-lg-6 col-xs-12 col-sm-6">
           <div class="form-group">
             <label for="exampleInputEmail1">End Date</label>
-            <input min={{this.currentDate}} style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
+            <input required min={{this.currentDate}} style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
             padding: .5rem .75rem;border-radius: .50rem;" type="date" name="endDate" id="endDate" [(ngModel)]="Election.endDate" class="form-control" id="exampleInputEmail1" placeholder="End Date of Election">
+
           </div>
         </div>
 
@@ -82,6 +84,7 @@ name="myForm" novalidate>
             <label for="exampleInputEmail1">Result Date</label>
             <input min={{this.currentDate}} style="border: 1px solid rgba(0,0,0,.15);     width: 100%;
             padding: .5rem .75rem;border-radius: .50rem;" type="date" class="form-control" id="resultDate" name="resultDate" [(ngModel)]="Election.resultDate" id="exampleInputEmail1" placeholder="Result Date of Election">
+
           </div>
         </div>
 
@@ -93,7 +96,7 @@ name="myForm" novalidate>
           </div>
         </div>
 
-        <button type="button" id="submit" class="btn btn-primary btn-large"  data-target="#exitApplication" disabled="disabled" (click)="addElection()" >Create Ballot</button>
+        <button type="button" id="submit" class="btn btn-primary btn-large"  data-target="#exitApplication"  (click)="addElection()" >Create Ballot</button>
         <!-- <input type="submit" id="register"  (click)="addElection()" class="btn btn-primary btn-large"  ata-target="#exitApplication"  value="Create Ballot" disabled="disabled"/> -->
         
 
