--- a/src/app/listofcandidate/listofcandidate.component.html
+++ b/src/app/listofcandidate/listofcandidate.component.html
@@ -11,9 +11,10 @@
         
         <h1>Candidate List</h1>
       
-      
+        <input id="myInput" type="text" placeholder="Search..">
+
         <div class="tbl-header ">
-          <table id="myTable">
+          <table >
             <thead>
               <tr>
                 <th>Employee ID</th>
@@ -28,7 +29,7 @@
         </div>
         <div class="tbl-content">
           <table>
-            <tbody>
+            <tbody id="myTable">
               <tr  *ngFor="let candidate of listOfCandidate | search:adharNo ; " [formGroup]="form">
                 <td>
                   <div class="form-group">
@@ -45,12 +46,12 @@
                     {{candidate.adharNo}}
                   </div>
                 </td>
-                <td>
+               <!-- <td>
                   <div  class="form-group" >
                     <img src=`{{candidate.symbol}}` width="100%" height="100%" alt="Image" />
                         
                   </div>
-                </td>
+                </td>-->
                 <td>
                   <div class="form-group">
                     {{candidate.email}}
