--- a/src/app/listofvoter/listofvoter.component.html
+++ b/src/app/listofvoter/listofvoter.component.html
@@ -11,7 +11,8 @@
         <!-- search : <input type="text" placeholder="Search Voter " ng-Model="searchText" >  -->
         <br>
         <h1>Voter List</h1>
-       
+        <input id="myInput1" type="text" placeholder="Search..">
+
         <div class="tbl-header ">
           <table>
             <thead>
@@ -27,7 +28,7 @@
         </div>
         <div class="tbl-content">
           <table>
-            <tbody>
+            <tbody  id="myTable1">
 
             <tr *ngFor="let voter of listOfVoter | search:adharNo;" >
               <td>
